<resources>
    <string name="app_name">Adebyat</string>

    <string name="filter">Bas bet</string>
    <string name="about">About</string>
    <string name="author">Avtor</string>
    <string name="poetry">Poeziya</string>
    <string name="prose">Proza</string>
    <string name="search">Qidiriw</string>
    <string name="authors">Avtorlar</string>
    <string name="directions">Jonelis</string>
    <string name="genre">Janr</string>
    <string name="period">Period</string>
    <string name="theme">Theme</string>
    <string name="text">
— Скажи-ка, дядя, ведь не даром\n
Москва, спаленная пожаром,\n
Французу отдана?\n
Ведь были ж схватки боевые,\n
Да, говорят, еще какие!\n
Недаром помнит вся Россия\n
Про день Бородина!\n

— Да, были люди в наше время,\n
Не то, что нынешнее племя:\n
Богатыри — не вы!\n
Плохая им досталась доля:\n
Немногие вернулись с поля…\n
Не будь на то господня воля,\n
Не отдали б Москвы!\n
\n
Мы долго молча отступали,\n
Досадно было, боя ждали,\n
Ворчали старики:\n
«Что ж мы? на зимние квартиры?\n
Не смеют, что ли, командиры\n
Чужие изорвать мундиры\n
О русские штыки?»\n
\n
И вот нашли большое поле:\n
Есть разгуляться где на воле!\n
Построили редут.\n
У наших ушки на макушке!\n
Чуть утро осветило пушки\n
И леса синие верхушки —\n
Французы тут как тут.\n
\n
Забил заряд я в пушку туго\n
И думал: угощу я друга!\n
Постой-ка, брат мусью!\n
Что тут хитрить, пожалуй к бою;\n
Уж мы пойдем ломить стеною,\n
Уж постоим мы головою\n
За родину свою!\n
\n
Два дня мы были в перестрелке.\n
Что толку в этакой безделке?\n
Мы ждали третий день.\n
Повсюду стали слышны речи:\n
«Пора добраться до картечи!»\n
И вот на поле грозной сечи\n
Ночная пала тень.\n
\n
Прилег вздремнуть я у лафета,\n
И слышно было до рассвета,\n
Как ликовал француз.\n
Но тих был наш бивак открытый:\n
Кто кивер чистил весь избитый,\n
Кто штык точил, ворча сердито,\n
Кусая длинный ус.\n
\n
И только небо засветилось,\n
Все шумно вдруг зашевелилось,\n
Сверкнул за строем строй.\n
Полковник наш рожден был хватом:\n
Слуга царю, отец солдатам…\n
Да, жаль его: сражен булатом,\n
Он спит в земле сырой.\n
\n
И молвил он, сверкнув очами:\n
«Ребята! не Москва ль за нами?\n
Умремте же под Москвой,\n
Как наши братья умирали!»\n
И умереть мы обещали,\n
И клятву верности сдержали\n
Мы в Бородинский бой.\n
\n
Ну ж был денек! Сквозь дым летучий\n
Французы двинулись, как тучи,\n
И всё на наш редут.\n
Уланы с пестрыми значками,\n
Драгуны с конскими хвостами,\n
Все промелькнули перед нами,\n
Все побывали тут.\n
\n
Вам не видать таких сражений!..\n
Носились знамена, как тени,\n
В дыму огонь блестел,\n
Звучал булат, картечь визжала,\n
Рука бойцов колоть устала,\n
И ядрам пролетать мешала\n
Гора кровавых тел.\n
\n
Изведал враг в тот день немало,\n
Что значит русский бой удалый,\n
Наш рукопашный бой!..\n
Земля тряслась — как наши груди,\n
Смешались в кучу кони, люди,\n
И залпы тысячи орудий\n
Слились в протяжный вой…\n
\n
Вот смерклось. Были все готовы\n
Заутра бой затеять новый\n
И до конца стоять…\n
Вот затрещали барабаны —\n
И отступили бусурманы.\n
Тогда считать мы стали раны,\n
Товарищей считать.\n
\n
Да, были люди в наше время,\n
Могучее, лихое племя:\n
Богатыри — не вы.\n
Плохая им досталась доля:\n
Немногие вернулись с поля.\n
Когда б на то не божья воля,\n
Не отдали б Москвы!\n
    </string>
    <string name="auto_complete_default_text">Saylanbadi...</string>

</resources>